Hacky Fix: overflow now scrolls on Tree Canvas

--- a/styles.css
+++ b/styles.css
@@ -72,6 +72,7 @@ button {
   background-color: #f0f0f0;
   border          : 1px solid lightgray;
   padding         : 5px;
+  overflow        : auto;
 }
 
 #canvas .row {
